--- a/src/main/resources/templates/pedido/formulario.html
+++ b/src/main/resources/templates/pedido/formulario.html
@@ -1,12 +1,9 @@
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">	</head>
-	<body>
+	<head th:replace="~{base :: head}"></head>
+    <body>
+        <div th:replace="~{base :: Logo}"></div>
 		<div class="container">
-			<div class="jumbotron mb-0">
-				<h1 class="display-4">Novo Pedido</h1>
-			</div>
+			<div th:replace="~{base :: titulo('Novo Pedido')}"></div>
             <div class="card mt-3">
                 <form th:object="${requisicaoNovoPedido}" class="card-body" action="/pedido/novo" method="POST">
                     <div class="form-group">
